Fixed geode+ recipes no longer override vanilla recipes. clean up some codes